tests/fail/missing_braces.stderr
error: top-level element requires braces, e.g. `expr @[attrs] { children }`
       note: braces declare this as a UI element in the component tree, not just an expression
 --> tests/fail/missing_braces.rs:5:9
  |
5 |         div
  |         ^^^

error: element requires braces: `{}`
 --> tests/fail/missing_braces.rs:9:13
  |
9 |             div
  |             ^^^

error: top-level element requires braces, e.g. `expr @[attrs] { children }`
       note: braces declare this as a UI element in the component tree, not just an expression
  --> tests/fail/missing_braces.rs:13:9
   |
13 |         div @[]
   |         ^^^

error: top-level element requires braces, e.g. `expr @[attrs] { children }`
       note: braces declare this as a UI element in the component tree, not just an expression
  --> tests/fail/missing_braces.rs:16:9
   |
16 |         Header
   |         ^^^^^^

error: element requires braces: `{}`
  --> tests/fail/missing_braces.rs:20:13
   |
20 |             Header
   |             ^^^^^^
